--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "axios": "^1.7.9",
     "cra-template": "1.2.0",
     "lucide-react": "^0.475.0",
+    "moment-timezone": "^0.6.0",
     "razorpay-checkout": "^1.0.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -18,7 +19,8 @@
     "react-router-dom": "^7.1.1",
     "react-scripts": "5.0.1",
     "react-slick": "^0.30.3",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "socket.io-client": "^4.8.1"
   },
   "scripts": {
     "start": "react-scripts start",
