--- a/package.json
+++ b/package.json
@@ -5,13 +5,19 @@
   "dependencies": {
     "@heroicons/react": "^1.0.6",
     "@lingui/babel-preset-react": "^2.9.2",
+    "@react-pdf/renderer": "^4.3.0",
     "animate.css": "^4.1.1",
     "axios": "^1.7.9",
     "cra-template": "1.2.0",
+    "date-fns": "^4.1.0",
+    "dayjs": "^1.11.18",
+    "fabric": "^6.7.1",
     "lucide-react": "^0.475.0",
     "moment-timezone": "^0.6.0",
     "razorpay-checkout": "^1.0.4",
     "react": "^19.0.0",
+    "react-bootstrap": "^2.10.10",
+    "react-datepicker": "^8.7.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
     "react-intersection-observer": "^9.14.1",
