--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "date-fns": "^4.1.0",
     "dayjs": "^1.11.18",
     "fabric": "^6.7.1",
+    "jspdf": "^3.0.3",
     "lucide-react": "^0.475.0",
     "moment-timezone": "^0.6.0",
     "razorpay-checkout": "^1.0.4",
