--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,20 +1,19 @@
 {
   "short_name": "EzyStudio",
   "name": "EzyStudio",
+  "description": "EzyStudio – Your easy studio management solution",
   "icons": [
-    {
-      "src": "/logo.png",
-      "sizes": "192x192",
-      "type": "image/png"
-    },
-    {
-      "src": "/logo.png",
-      "sizes": "512x512",
-      "type": "image/png"
-    }
+    { "src": "logo.png", "sizes": "48x48", "type": "image/png" },
+    { "src": "lo.png", "sizes": "72x72", "type": "image/png" },
+    { "src": "logo.png", "sizes": "96x96", "type": "image/png" },
+    { "src": "logo.png", "sizes": "144x144", "type": "image/png" },
+    { "src": "logo.png", "sizes": "192x192", "type": "image/png" },
+    { "src": "logo.png", "sizes": "512x512", "type": "image/png" }
   ],
   "start_url": ".",
+  "scope": "/",
   "display": "standalone",
+  "orientation": "portrait",
   "theme_color": "#4f46e5",
   "background_color": "#ffffff"
 }
